Fixed JVM opts